--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <!--Bootstrap CSS-->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!--bootstrap JS-->
-  <script src="js/jquery.min.js"></script>
+  
   <script src="js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://kit.fontawesome.com/8b1679ca39.js" crossorigin="anonymous"></script>
+  <!--<script src="https://kit.fontawesome.com/8b1679ca39.js" crossorigin="anonymous"></script>-->
 </head>
 
 <body>
@@ -48,13 +48,13 @@
   <!--carousel-->
   <div id="carousel" class="carousel slide">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" ></button>
       <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
       <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-        <img src="" alt="Slider" class="d-block w-75">
+        <img src="dosa (2).jpg" alt="Slider" class="d-block w-75">
       </div>
       
       <div class="carousel-item">
@@ -111,8 +111,8 @@
                 <img src="Basundi.jpg" class="card-img-top">
               </div>
               <div class="card-footer text-center text-bg-info">
-                <h5>$ 70</h5>
-                <a href="#" class="btn btn-primary d-block">ADD CART</a>
+                <h5>Rs. 70</h5>
+                <a href="#" class="btn btn-primary d-block">Order</a>
               </div>
             </div>
           </div>
@@ -125,7 +125,7 @@
                 <img src="gulab jamun.jpg" height="300px" class="card-img-top">
               </div>
               <div class="card-footer text-center text-bg-info">
-                <h5>$50</h5>
+                <h5>Rs.50</h5>
                 <a href="#" class="btn btn-primary d-block">Order</a>
               </div>
             </div>
@@ -139,7 +139,7 @@
                 <img src="dosa (2).jpg" height="300px" class="card-img-top">
               </div>
               <div class="card-footer text-center text-bg-info">
-                <h5>$ 30</h5>
+                <h5>Rs.30</h5>
                 <a href="#" class="btn btn-primary d-block">Order</a>
               </div>
             </div>
@@ -158,7 +158,7 @@
                 <img src="Masala-Dosa.jpg" height="300px" class="card-img-top">
               </div>
               <div class="card-footer text-center text-bg-info">
-                <h5>$ 90</h5>
+                <h5>Rs. 90</h5>
                 <a href="#" class="btn btn-primary d-block">Order</a>
               </div>
             </div>
@@ -172,7 +172,7 @@
                 <img src="venpongal.jpg" height="300px" class="card-img-top">
               </div>
               <div class="card-footer text-center text-bg-info">
-                <h5>$ 40</h5>
+                <h5>RS. 40</h5>
                 <a href="#" class="btn btn-primary d-block">Order</a>
               </div>
             </div>
@@ -186,7 +186,7 @@
                 <img src="vada.jpg" height="300px" class="card-img-top">
               </div>
               <div class="card-footer text-center text-bg-info">
-                <h5>$ 10</h5>
+                <h5>Rs. 10</h5>
                 <a href="#" class="btn btn-primary d-block">Order</a>
               </div>
             </div>
